examples/blue-green/bluegreen-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-demo
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/app-root: /
spec:
  ingressClassName: nginx
  rules:
    - host: blue-green.dev.caruso.systems
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bluegreen-demo
                port:
                  number: 80
