examples/blue-green/bluegreen-preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-demo-preview
spec:
  ingressClassName: nginx
  rules:
    - host: blue-green-preview.dev.caruso.systems
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bluegreen-demo-preview
                port:
                  number: 80
